fix overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,7 @@ button:onfocus {
 iframe {
 	border: none;
 }
+
+.main-content {
+  padding-top: 70px;
+}
